# MiniRocketHLS

./: .gitignore  ALGORITHM.md  BUILD_ERROR_REPORT.txt  CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  FILE_STRUCTURE.md  FPGA_IMPLEMENTATION.md  FPGA_SYNTHESIS_GUIDE.md  GIT_COMMIT_GUIDE.md  HLS_NEWCOMER_GUIDE.md  MINIROCKET_PIPELINE_DETAILED.md  Makefile  Makefile.hls  OPTIMIZATION_SUMMARY.md  README.md  RESEARCH_PLAN.md  RESULTS.md  commit_changes.sh  fpga_deployment_options.md  generate_model_constants.py  minirocket_fpga_embedded.cpp  minirocket_hls_testbench_loader.cpp  minirocket_inference.cpp  minirocket_inference_hls.cpp  minirocket_model.json  minirocket_model_constants.h  minirocket_test  minirocket_test 2  test_hls  test_hls.cpp  train_minirocket.py
benchmarks/: copy.sh  download.sh
cpu/: Makefile  cpu-latency.py  env.sh  minirocket_cpu_inference.cpp  multirocket_cpu_inference.cpp
cpu-network/: env.sh  minirocket_network.py  test-client.py  test-server.py
docs/: 1to1_vs_optimized_comparison.md  ALGORITHM.md  DATASET_SPLIT_INFO.md  DELIVERABLES.md  FPGA_IMPLEMENTATION.md  HYDRA_FPGA_FIX_SUMMARY.md  HYDRA_FPGA_ISSUE_ANALYSIS.md  HYDRA_JSON_LOADER_FIX.md  SOLUTION_SUMMARY.md  STATUS_REPORT.md  TRAINING_FIX_README.md
dpdk-server/: CMakeLists.txt  bind.sh  build.sh  client.py  copy.sh  env.sh  server.cpp  server.py
fp_optimization/: config.cfg  power.py  train_minirocket.py  xrt.ini
fpga-network/: CMakeLists.txt  Makefile  config-pass-through.cfg.in  config.cfg  config.cfg.in  config_cmac.mk  env.sh  utils.mk
fpga-network/xrt_host_api/examples/minirocket/: CMakeLists.txt  minirocket.cpp
hydra_optimized/: .gitignore  BUILD_ARTIFACTS.md  CMakeLists.txt  CPU_POWER_BENCHMARK_RESULTS.md  FPGA_VS_CPU_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  Makefile  POWER_BENCHMARK_RESULTS.md  README.md  TRAINING_SUMMARY.md  config.cfg  config_280mhz.cfg  config_2cu.cfg  config_2cu_280mhz.cfg  performance_comparison.md  run_full_fpga_test.sh  run_power_benchmarks.sh  xrt.ini
hydra_optimized/docs/: ALGORITHM.md
hydra_optimized/hydra/: CMakeLists.txt  make.tcl.in
hydra_optimized/hydra/include/: hydra.hpp  weights.txt
hydra_optimized/hydra/src/: hydra.cpp  hydra_pooling.cpp
hydra_optimized/hydra/test/: hydra_hls_testbench_loader.cpp  hydra_hls_testbench_loader.h  test_hydra.cpp
hydra_optimized/power_results/: FruitFlies_power_analysis.txt  InsectSound_power_analysis.txt  MosquitoSound_power_analysis.txt
hydra_optimized/scripts/: benchmark_cpu.py  benchmark_cpu_power.py  benchmark_hydra.py  cpu_validate.py  create_full_tests.py  create_quick_tests.py  create_sample_test.py  create_test_files.py  custom_hydra.py  hydra_test_model.json  quick_cpu_benchmark.py  test_dataset_load.py  test_performance.py  train_and_save_models.py  train_and_save_models_fast.py  train_hydra.py  ucr_fpga_benchmark.py
hydra_optimized/test/: test_hydra_fused_csim.cpp  test_hydra_optimized_csim.cpp
minirocket_fp_stream/: CMakeLists.txt  Makefile  config.cfg  output_InsectSound.txt  run.sh  train_minirocket.py
minirocket_modular/: .gitignore  FruitFlies_minirocket_model.json  InsectSound_minirocket_model.json  Makefile  MosquitoSound_minirocket_model.json  build_fe_v16_hw.sh  config.cfg  config_2cu.cfg  config_3cu.cfg  link_v16_hw.sh  xrt.ini
minirocket_stream/: CMakeLists.txt  Makefile  config.cfg  create_test_model.py  output_FruitFlies.txt  output_FruitFlies_batch.txt  output_FruitFlies_stream.txt  output_InsectSound_batch.txt  output_InsectSound_stream.txt  output_InsectSound_verify.txt  output_MosquitoSound.txt  output_MosquitoSound_batch.txt  output_MosquitoSound_batch2.txt  train_minirocket.py  xrt.ini
multirocket_fp_optimization/: CMakeLists.txt  Makefile  config.cfg
multirocket_optimized/: MULTIROCKET_FIXES_SUMMARY.md  Makefile  README.md  config.cfg  multirocket_host
multirocket_stream/: CMakeLists.txt  Makefile  config.cfg  multirocket_host
optimized_version/: CMakeLists.txt  Makefile  train_minirocket.py  train_minirocket_for_fpga-old-saved-for-ref.py
optimized_version_77b3cee/: config.cfg  cpu-latency.py  minirocket_host.cpp  train_minirocket.py
reference_1to1/: Makefile  (+8 more)
(+792 files in other folders)
